# DebugThing

./: .gitignore  CMakeLists.txt  README.md  flake.nix  result
src/: main.c  utils.c
